@@ -1,3 +1,19 @@
+/*
+ * Copyright 2020 ART-Framework Contributors (https://github.com/Silthus/art-framework)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package net.silthus.art.api.config;
 
 import org.junit.jupiter.api.DisplayName;
@@ -5,6 +21,7 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -30,7 +47,7 @@ class ConfigFieldInformationTest {
         @DisplayName("should sort by position in ascending order")
         void shouldSortByPosition() {
 
-            List<ConfigFieldInformation> fields = List.of(
+            List<ConfigFieldInformation> fields = Arrays.asList(
                     fieldInfo("bar", 1),
                     fieldInfo("test", 3),
                     fieldInfo("foo", 0),
@@ -48,7 +65,7 @@ class ConfigFieldInformationTest {
         @DisplayName("should sort unpositioned elements at the end")
         void shouldSortUnpositionedElementsAtTheEnd() {
 
-            List<ConfigFieldInformation> fields = List.of(
+            List<ConfigFieldInformation> fields = Arrays.asList(
                     fieldInfo("bar", 1),
                     fieldInfo("test", 3),
                     fieldInfo("abc"),
@@ -68,7 +85,7 @@ class ConfigFieldInformationTest {
         @DisplayName("should sort unpositioned elements by name and at the end")
         void shouldSortUnpositionedElementsByName() {
 
-            List<ConfigFieldInformation> fields = List.of(
+            List<ConfigFieldInformation> fields = Arrays.asList(
                     fieldInfo("zzz"),
                     fieldInfo("bar", 1),
                     fieldInfo("test", 3),
